[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/SceneChangeButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/game-over.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/ui/flames.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 125, 208 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 125, 0, 125, 208 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 250, 0, 125, 208 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 375, 0, 125, 208 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 500, 0, 125, 208 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 208, 125, 208 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 125, 208, 125, 208 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 250, 208, 125, 208 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 375, 208, 125, 208 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 500, 208, 125, 208 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 416, 125, 208 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 125, 416, 125, 208 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 250, 416, 125, 208 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 375, 416, 125, 208 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 500, 416, 125, 208 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bombs" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -516.154
margin_top = -11.4026
margin_right = -186.154
margin_bottom = 88.5974
text = "Bombs: %s / 8"
valign = 1

[node name="Timer" type="Timer" parent="bombs"]
autostart = true

[node name="health" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -779.117
margin_top = -7.39808
margin_right = -449.117
margin_bottom = 92.6019
text = "Health: %.1f / 8"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bomb_timer" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1111.49
margin_top = -6.06324
margin_right = -781.492
margin_bottom = 93.9367
text = "%d : %d"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fps" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -197.0
margin_top = 5.0
margin_right = -46.0
margin_bottom = 68.0
text = "Fps    : %s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.321569 )

[node name="Title" parent="PauseOverlay" instance=ExtResource( 3 )]
margin_top = 150.0
margin_bottom = 320.0
text = "Paused"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -135.0
margin_right = 135.0
margin_bottom = 135.0

[node name="RetryButton2" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_bottom = 84.0

[node name="MainScreenButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 5 )]
margin_top = 92.0
margin_right = 274.0
margin_bottom = 177.0
text = "Back to Main Screen"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 6 )]
margin_top = 185.0
margin_right = 274.0
margin_bottom = 270.0

[node name="sounds" type="Node2D" parent="."]

[node name="game_over" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource( 7 )
attenuation = 0.0044871

[node name="combos" type="Node2D" parent="."]

[node name="red_overlay" type="ColorRect" parent="combos"]
margin_right = 1200.0
margin_bottom = 727.0
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="combo" type="Label" parent="combos"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 1003.0
margin_top = 83.7556
margin_right = 1154.0
margin_bottom = 146.756
text = "Combo: x%s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flame" type="AnimatedSprite" parent="combos"]
position = Vector2( 975.768, 109.457 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 16 )
frame = 5
speed_scale = 0.5
playing = true
[connection signal="timeout" from="bombs/Timer" to="." method="_on_bomb_tick_timeout"]
